update volumes and networks to be external in tickets docker compose example

--- a/sheets/docker-compose/examples/tickets/docker-compose.yaml
+++ b/sheets/docker-compose/examples/tickets/docker-compose.yaml
@@ -58,10 +58,10 @@ services:
 volumes:
   db_data:
     name: tickets_db_data
-    external: false
+    external: true
 
 networks:
   frontnet:
-    external: false
+    external: true
   backnet:
-    external: false
+    external: true
