--- a/sheets/docker-compose/examples/portainer/docker-compose.yaml
+++ b/sheets/docker-compose/examples/portainer/docker-compose.yaml
@@ -3,25 +3,19 @@ version: '3.8'
 services:
   app:
     image: portainer/portainer-ee:2.19.4
-    container_name: portainer
+    container_name: portainer-ee
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - data:/data
+      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/portainer-ee/data:/data
     expose:
       - 9443
     networks:
       - frontnet
 
-volumes:
-  data:
-    name: portainer_data
-    external: true
-
 networks:
   frontnet:
     external: true
-
