update compose file examples to match personal setup

--- a/sheets/docker-compose/examples/nginx-proxy-manager/docker-compose.yaml
+++ b/sheets/docker-compose/examples/nginx-proxy-manager/docker-compose.yaml
@@ -32,7 +32,7 @@ services:
       - db
 
   db:
-    image: jc21/mariadb-aria:latest
+    image: jc21/mariadb-aria:10.11.5
     container_name: nginx-proxy-manager-db
     restart: unless-stopped
     environment:
